# AlgebraDash

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  mod.json
.github/workflows/: build.yml
include/: config.hpp  glew_add.h  includes.hpp  proxy.h  shared_pool.hpp
include/features/: base.hpp
include/features/optimizations/: loading.hpp  rendering.hpp
include/optimizations/: base.hpp  loading.hpp  rendering.hpp
include/profiler/: hooks.hpp  profiler.hpp
include/util/: patcher.hpp  reverse.hpp
libraries/qoi/: qoixx.hpp
res/: XInput9_1_0.def  version.def
src/: ThreadPool.cpp  ThreadPool.hpp  includes.h  loader.cpp  main.cpp  patcher.cpp  patcher.h  shared_pool.cpp
src/debug/: profiler.cpp  stats.cpp
src/features/improvements/: anti_aliasing.cpp  antialiasing.cpp  fast_alt_tab.cpp  force_rgba8888.cpp  main_loop_rewrite.cpp  particles.cpp  smooth_particles.cpp
src/features/optimizations/: loading.cpp  rendering.cpp
src/features/optimizations/loading/: parallel_loading.cpp  qoi_cache.cpp  threading.cpp
src/features/optimizations/processing/: fast_pickup.cpp  moveActions.cpp  move_actions.cpp  moves.cpp  rotations.cpp
src/features/optimizations/rendering/: fast_batch_sort.cpp  opengl_update.cpp  parallel_batch.cpp  threading.cpp  updatevisibility_rewrite.cpp
src/main/: dllmain.cpp  main.cpp
src/main/loading/: loading.cpp  loading.h
src/main/playLayerUpdateVisibility/: playLayerUpdateVisibility.cpp  playLayerUpdateVisibility.h
src/main/profiler/: hooks.h  profiler.cpp
src/main/rendering/: rendering.cpp  rendering.h
src/main/rotates/: rotates.cpp  rotates.h
src/optimizations/: loading.cpp  rendering.cpp
src/profiler/: hooks.h  profiler.cpp
src/util/: patcher.cpp
